frontend/tests/cases/negative/interfaces/kind-mismatch/instanceFreeVarAppMismatched.gr
data Id a = Id a

interface Mismatch a (b : Type -> Type)

-- 'a' cannot have both kind 'Type' and kind 'Type -> Type'
instance Mismatch (Id a) a
